# EVisionBetCode

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ALL_7_PHASES_COMPLETE.md  ARCHITECTURE_PROPOSAL.md  BUILD_COMPLETION_REPORT.md  CLEANUP_SUMMARY_DEC9_2025.md  COMPLETION_CHECKLIST.md  DATA_QUALITY_TODO.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_BACKEND_API.md  DEPLOY_NOW.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_AUDIT.md  EVisionBetCode.code-workspace  FINAL_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_INTEGRATION_GUIDE.md  HANDOFF_DEC9_2025.md  HANDOVER_DEC10_2025.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LINE_ALIGNMENT_GUIDE.md  LINE_MOVEMENT_COMPLETE.md  LINE_MOVEMENT_SETUP.md  MIGRATION_COMPLETE.md  Makefile  OPTIMIZATION_GUIDE.md  OPTION_C_ADMIN_DASHBOARD.md  OPTION_C_QUICK_START.md  PHASES_1_TO_5_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_DELIVERY.md  PROJECT_ANALYSIS_DEC2025.md  QUICK_ACTION_PLAN.md  (+57 more)
.github/: AI_AGENT_GUIDE.md  copilot-instructions.md
.github/workflows/: backend-ci.yml  tests.yml
archive/: ARCHIVE_ANALYSIS.md  ARCHIVE_COMPLETE.md  README.md  filter_two_way.py  pipeline_v3.py
archive/database_setup/: create_tables.sql  create_tables_enhanced.sql
archive/exploration/: discover_markets.py
archive/pipeline_v2/: README.md  __init__.py  extract_odds.py  ratings.py
archive/session_notes/: BACKEND_API_DEPLOYMENT.md  CLEANUP_NOTES_DEC13_2025.md  CODE_REVIEW_FIXES_DEC13.md  COMPLETION_SUMMARY_DEC13.md  STATUS_DOCUMENTATION_COMPLETE_DEC13.md
archive/v3/: __init__.py  base_extractor.py  config.py
archive/v3/extractors/: __init__.py  nba_extractor.py
core/: all_odds_logger.py  book_weights.py  config.py  exotics_logger.py  fair_odds.py  logging.py  raw_odds_logger.py
docs/: API_TESTING_GUIDE.md  BACKEND_API_V3.md  BETFAIR_ANALYSIS.md  BOOKMAKER_CSV_BUILD.md  BOOK_WEIGHTS_INTEGRATION.md  BUGFIX_FAIR_ODDS_DEC10_2025.md  CLEANUP_REPORT_DEC2025.md  DOCUMENTATION_INDEX.md  FRONTEND_DEVELOPER_REFERENCE.md  IMPLEMENTATION_SUMMARY_NORMALIZATION.md  NORMALIZATION_VISUAL_GUIDE.md  ODDS_API_REFERENCE.md  PHASE_5_COMPLETION.md  PHASE_7_COMPLETE.md  POINT_NORMALIZATION.md  PROJECT_SETUP.md  TWO_STAGE_PIPELINE.md
docs/archive/: FAIR_ODDS_CALCULATION.md  RAW_ODDS_EXTRACTION.md  SETUP_GUIDE.md
pipeline_v2/: README.md  calculate_ev.py  calculate_opportunities.py  extract_odds.py  line_movement_detector.py  outlier_test.py  raw_odds_pure.py
src/core/: book_weights.py  config.py  fair_odds.py  fair_prices.py  h2h.py  interpolation.py  logging.py  nfl_props.py  player_props.py  spreads.py  totals.py  utils.py
src/legacy/: CLEANUP_SUMMARY_DEC9_2025.md  README.txt  ev_arb_bot.py  extract_ev_hits.py
src/legacy/core/: all_odds_logger.py  balldontlie.py  betfair_api.py  exotics_logger.py  fair_prices.py  fair_prices_v2.py  player_props_handler_NEW.py  raw_odds_logger.py
src/legacy/core/scrape_sources/: __init__.py  base_adapter.py  bet365_au.py  betr_au.py  betright.py  boombet.py  dabble_au.py  ladbrokes.py  (+9 more)
src/legacy/pipeline/: check_outliers_ev.py  outlier_test.py
src/pipeline_v2/: README.md  __init__.py  calculate_opportunities.py  extract_odds.py  line_movement_detector.py  ratings.py
src/v3/: README.md  __init__.py  base_extractor.py  config.py
src/v3/configs/: __init__.py  api_tiers.py  bookmakers.py  fair_odds.py  regions.py  sports.py  weights.py
src/v3/extractors/: __init__.py  nba_extractor.py  nfl_extractor.py
src/v3/processors/: __init__.py  fair_odds_nba.py  fair_odds_nfl.py  fair_odds_v2.py
tests/: test_book_weights.py  test_master_fair.py  test_master_fair.py.old
