[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-arb-bot"
version = "1.0.0"
description = "EV (Expected Value) finder and analyzer for sports betting using The Odds API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Patrick McSweeney", email = "patrickmcsweeney81@example.com"}
]
keywords = ["sports-betting", "expected-value", "ev", "odds", "arbitrage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

# Core production dependencies
dependencies = [
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
]

# Optional dependencies for features
[project.optional-dependencies]
telegram = ["requests>=2.32.0"]  # For Telegram notifications
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
]
all = ["ev-arb-bot[telegram,dev]"]

[project.urls]
Homepage = "https://github.com/patrickmcsweeney81/EV_ARB-Bot-VSCode"
Documentation = "https://github.com/patrickmcsweeney81/EV_ARB-Bot-VSCode/blob/main/README.md"
Repository = "https://github.com/patrickmcsweeney81/EV_ARB-Bot-VSCode.git"
"Bug Tracker" = "https://github.com/patrickmcsweeney81/EV_ARB-Bot-VSCode/issues"

# Setuptools configuration for src/ layout
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Coverage options
# Uncomment below if using pytest-cov
# --cov=core --cov-report=html --cov-report=term-missing

# Black - Code formatter
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

# isort - Import sorter
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["core", "pipeline_v2", "legacy"]
known_third_party = ["requests", "dotenv"]

# flake8 - Linter
# Note: flake8 config via .flake8 file or setup.cfg works better
# This is here for reference - use .flake8 file instead

# mypy - Type checker
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = ["venv", "tests", "data"]

# pylint - Code analyzer
[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0212",  # protected-access
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 10
